Fix accent workflow env

--- a/.github/workflows/accent.yml
+++ b/.github/workflows/accent.yml
@@ -6,8 +6,8 @@ on:
     workflow_dispatch:
 
 env:
-    ACCENT_API_URL: ${{ ACCENT_URL }}
-    ACCENT_API_KEY: ${{ ACCENT_TOKEN }}
+    ACCENT_API_URL: ${{ env.ACCENT_URL }}
+    ACCENT_API_KEY: ${{ secrets.ACCENT_TOKEN }}
 
 jobs:
     build:
