--- a/.github/workflows/accent.yml
+++ b/.github/workflows/accent.yml
@@ -20,12 +20,14 @@ jobs:
             - run: accent sync --add-translations --merge-type=passive --order-by=key
             - uses: peter-evans/create-pull-request@v4
               with:
-                  add-paths: "*.po"
+                  branch: accent
+                  title: New translations are available to merge
+                  body: Translation files have been updated, feel free to merge this pull request after review.
+                  add-paths: "core/src/main/resources/assets/eshare/i18n/*.json"
                   commit-message: Update Accent
                   committer: GitHub <noreply@github.com>
                   author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
-                  branch: accent
                   draft: false
                   delete-branch: true
-                  title: New translations are available to merge
-                  body: Translation files have been updated, feel free to merge this pull request after review.
+                  assignees: RappyTV,Northernside
+                  labels: translations
